--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "babel-plugin-import": "^1.12.0",
     "classname": "^0.0.0",
     "customize-cra": "^0.8.0",
+    "for-editor": "^0.3.5",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "markdown-navbar": "1.4.0",
+    "marked": "^2.0.3",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
+    "react-infinite-scroller": "^1.2.4",
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.2.0",
